--- a/CallorieCrusher/MainWindow.xaml
+++ b/CallorieCrusher/MainWindow.xaml
@@ -7,7 +7,9 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <StackPanel>
         <Label Content="Here will be calculator"></Label>
-        <Label Content="Label" HorizontalAlignment="Left" Margin="-156,305,0,0" VerticalAlignment="Top"/>
+        <Label Content="Radomir branch"></Label>
+        </StackPanel>
     </Grid>
 </Window>
