--- a/CallorieCrusher/MainWindow.xaml
+++ b/CallorieCrusher/MainWindow.xaml
@@ -8,5 +8,6 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <Label Content="Here will be calculator"></Label>
+        <Label Content="Here will be calculator"></Label>
     </Grid>
 </Window>
