--- a/CallorieCrusher/MainWindow.xaml
+++ b/CallorieCrusher/MainWindow.xaml
@@ -8,6 +8,8 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <Label Content="Here will be calculator"></Label>
-        <Label Content="Here will be calculator"></Label>
+
+            <Calendar x:Name="cal" Margin="325,94,295,180"/>
+
     </Grid>
 </Window>
