--- a/CallorieCrusher/SingIn.xaml
+++ b/CallorieCrusher/SingIn.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Cake_House"
+        xmlns:local="clr-namespace:CallorieCrusher"
         mc:Ignorable="d"
         Title="SingIn" Height="360" Width="470"
          Background="#D9F0C7" Closed="Close">
