--- a/CallorieCrusher/MainWindow.xaml
+++ b/CallorieCrusher/MainWindow.xaml
@@ -8,14 +8,14 @@
         Title="MainWindow" Height="720" Width="1280">
 
     <Grid>
-        <StackPanel Orientation="Horizontal" Height="50" VerticalAlignment="Top" Background="Green">
-            <Button x:Name="Main" Content="Main"  Width="110" Height="30" Margin="20,0,0,0" Background="White" Click="Main_Click"/>
-            <Button x:Name="Eat" Content="Food" Width="110" Height="30" Margin="20,0,0,0" Background="White" Click="Eat_Click"/>
-            <Button x:Name="Calend" Content="Calendar" Width="110" Height="30" Margin="20,0,0,0" Background="White" Click="Calend_Click"/>
-            <Button x:Name="Stat" Content="Stats" Width="110" Height="30" Margin="20,0,0,0" Background="White" Click="Stat_Click"/>
-            <Label x:Name="Time"  Margin="580,0,0,0" FontSize="12"  Width="150" Foreground="White" Padding="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <StackPanel Orientation="Horizontal" Height="50" VerticalAlignment="Top" Background="white">
+            <Button x:Name="Main" Content="Main"  Width="110" Height="30" Margin="20,0,0,0" Background="#4B752B" Click="Main_Click" />
+            <Button x:Name="Eat" Content="Food" Width="110" Height="30" Margin="20,0,0,0" Background="#4B752B" Click="Eat_Click"/>
+            <Button x:Name="Calend" Content="Calendar" Width="110" Height="30" Margin="20,0,0,0" Background="#4B752B" Click="Calend_Click"/>
+            <Button x:Name="Stat" Content="Stats" Width="110" Height="30" Margin="20,0,0,0" Background="#4B752B" Click="Stat_Click"/>
+            <Label x:Name="Time"  Margin="580,0,0,0" FontSize="12"  Width="150" Foreground="#4B752B" Padding="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         </StackPanel>
-        <StackPanel x:Name="Page1" Background="#D9F0C7" Height="654" VerticalAlignment="Top" Margin="0,50,0,0" Orientation="Horizontal" Visibility="Visible">
+        <StackPanel x:Name="Page1" Background="#D9F0C7" Height="654" VerticalAlignment="Top" Margin="0,50,0,0" Orientation="Horizontal" Visibility="Hidden">
             <StackPanel Orientation="Horizontal" Width="600" Height="532"  Margin="13,0,0,0">
                 <Label Width="132" Height="531" VerticalAlignment="Bottom" Margin="16,0,0,0" Background="Transparent" BorderBrush="Black" BorderThickness="1"/>
                 <Label Width="130" Height="300" VerticalAlignment="Bottom" Margin="-132,0,0,1" Background="red"/>
@@ -43,11 +43,12 @@
 
 
 
-        <StackPanel x:Name="Page2" Background="#D9F0C7" Height="654" VerticalAlignment="Top" Margin="0,50,0,0" Orientation="Horizontal" Visibility="Hidden">
-           
+        <StackPanel x:Name="Page2" Background="#D9F0C7" Height="654" VerticalAlignment="Top" Margin="0,50,0,0" Orientation="Vertical" Visibility="Visible">
+            <StackPanel Orientation="Horizontal" Height="50" Margin="0,25,0,0">
+                <TextBox x:Name="Search" Width="650" Height="30" Margin="20,0,0,0" Text="Пошук" FontSize="18" Padding="0,0,0,0" PreviewMouseLeftButtonDown="TextBox_PreviewMouseLeftButtonDown"/>
+                <Button Height="30" Width="30" Background="White" Content="🔍"/>
+            </StackPanel>
         </StackPanel>
-        
-        
         
         <StackPanel x:Name="Page3" Background="#D9F0C7" Height="654" VerticalAlignment="Top" Margin="0,50,0,0" Orientation="Horizontal" Visibility="Hidden">
 
