--- a/CallorieCrusher/Callorie Crusher Main.xaml
+++ b/CallorieCrusher/Callorie Crusher Main.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CallorieCrusher"
         mc:Ignorable="d"
-        Title="Callorie_Crusher_Main" Height="720" Width="1280"
+        Title="Callorie_Crusher_Main" Height="730" Width="1280"
         Background="#D9F0C7">
     <Window.Resources>
         <Style TargetType="Button">
@@ -22,20 +22,14 @@
         </Style>
     </Window.Resources>
     <Grid>
-        <StackPanel>
-            <Rectangle Fill="White" Width="1280" Height="60" VerticalAlignment="Top"></Rectangle>
-            <Rectangle Fill="#4B752B" Height="2" Width="1280"></Rectangle>
+        <StackPanel Orientation="Horizontal" Height="60" VerticalAlignment="Top" Background="White">
+            <Button Content="Main" FontSize="32" Foreground="White" Background="#4B752B" FontFamily="Bodoni MT" Name="osnova" Width="150" Margin="15,5,0,5" Click="osnova_Click"></Button>
+            <Button Content="Food" FontSize="32" Foreground="White" Background="#4B752B" FontFamily="Bodoni MT" Name="food" Width="150" Margin="15,5,0,5" Click="food_Click"></Button>
+            <Button Content="Calendar" FontSize="32" Foreground="White" Background="#4B752B" FontFamily="Bodoni MT" Name="calendar" Width="150" Margin="15,5,0,5" Click="calendar_Click"></Button>
+            <Button Content="Stats" FontSize="32" Foreground="White" Background="#4B752B" FontFamily="Bodoni MT" Name="stats" Width="150" Margin="15,5,0,5" Click="stats_Click"></Button>
+            <Label x:Name="timelabel" FontSize="32" Width="390" Foreground="#4B752B"  FontFamily="Bodoni MT" Margin="270,0,0,0" Padding="0,10,0,0"></Label>
         </StackPanel>
-        <StackPanel Orientation="Horizontal" Height="60" VerticalAlignment="Top">
-            <Button Content="Main" FontSize="32" Foreground="White" Background="#4B752B" FontFamily="Bodoni MT" Name="osnova" Width="150" Margin="15,5,0,5"></Button>
-            <Button Content="Food" FontSize="32" Foreground="White" Background="#4B752B" FontFamily="Bodoni MT" Name="food" Width="150" Margin="15,5,0,5"></Button>
-            <Button Content="Calendar" FontSize="32" Foreground="White" Background="#4B752B" FontFamily="Bodoni MT" Name="calendar" Width="150" Margin="15,5,0,5"></Button>
-            <Button Content="Stats" FontSize="32" Foreground="White" Background="#4B752B" FontFamily="Bodoni MT" Name="stats" Width="150" Margin="15,5,0,5"></Button>
-            <StackPanel Orientation="Horizontal" FlowDirection="RightToLeft" Width="620">
-                <Label Name="timelabel" FontSize="32" Foreground="#4B752B"  FontFamily="Bodoni MT" Content="time" Margin="200,0,0,0"></Label>
-            </StackPanel>
-        </StackPanel>        
-        <StackPanel x:Name="Page1" Height="650" VerticalAlignment="Bottom" Margin="0,50,0,0" Orientation="Horizontal" Visibility="Visible">
+        <StackPanel x:Name="Page1" Height="644" VerticalAlignment="Top" Margin="0,60,0,0" Orientation="Horizontal" Visibility="Visible" Background="#D9F0C7">
             <StackPanel Orientation="Horizontal" Width="600" Height="532"  Margin="13,0,0,0">
                 <Label Width="132" Height="531" VerticalAlignment="Bottom" Margin="16,0,0,0" Background="Transparent" BorderBrush="Black" BorderThickness="1"/>
                 <Label Width="130" Height="300" VerticalAlignment="Bottom" Margin="-132,0,0,1" Background="red"/>
@@ -63,20 +57,20 @@
 
 
 
-        <StackPanel x:Name="Page2" Background="#D9F0C7" Height="654" VerticalAlignment="Top" Margin="0,50,0,0" Orientation="Vertical" Visibility="Hidden">
+        <StackPanel x:Name="Page2" Background="#D9F0C7" Height="629" VerticalAlignment="Top" Margin="0,65,0,0" Orientation="Vertical" Visibility="Hidden">
             <StackPanel Orientation="Horizontal" Height="50" Margin="0,25,0,0">
                 <TextBox x:Name="Search" Width="650" Height="30" Margin="20,0,0,0" Text="Пошук" FontSize="18" Padding="0,0,0,0" PreviewMouseLeftButtonDown="TextBox_PreviewMouseLeftButtonDown"/>
                 <Button Height="30" Width="30" Background="White" Content="🔍"/>
             </StackPanel>
         </StackPanel>
 
-        <StackPanel x:Name="Page3" Background="#D9F0C7" Height="654" VerticalAlignment="Top" Margin="0,50,0,0" Orientation="Horizontal" Visibility="Hidden">
+        <StackPanel x:Name="Page3" Background="#D9F0C7" Height="639" VerticalAlignment="Top" Margin="0,65,0,0" Orientation="Horizontal" Visibility="Hidden">
 
         </StackPanel>
 
 
 
-        <StackPanel x:Name="Page4" Background="#D9F0C7" Height="654" VerticalAlignment="Top" Margin="0,50,0,0" Orientation="Horizontal" Visibility="Hidden">
+        <StackPanel x:Name="Page4" Background="#D9F0C7" Height="639" VerticalAlignment="Top" Margin="0,65,0,0" Orientation="Horizontal" Visibility="Hidden">
 
         </StackPanel>
     </Grid>
