--- a/CallorieCrusher/MainWindow.xaml
+++ b/CallorieCrusher/MainWindow.xaml
@@ -4,6 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CallorieCrusher"
+         xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls" 
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         Title="Register" Height="400" Width="300"
          Background="#D9F0C7">
@@ -25,7 +27,7 @@
         <StackPanel>
             <Label Content="Callorie Crusher" FontFamily="Bodoni MT" FontSize="42" HorizontalAlignment="Center"></Label>
             <Label Content="Login" FontFamily="Bodoni MT" FontSize="28" HorizontalAlignment="Center" Margin="0,20,0,0"></Label>
-            <TextBox Name="login" FontFamily="Bodoni MT" FontSize="28" Margin="20,0,20,0"></TextBox>
+            <TextBox Name="login" FontFamily="Bodoni MT" FontSize="28" Margin="20,0,20,0" Background="#7FFFFFFF"  materialDesign:HintAssist.Hint="Enter Login" Style="{StaticResource ResourceKey=MaterialDesignTextBox}" BorderThickness="0,0,0,1" mah:ControlsHelper.FocusBorderThickness="0,0,10,0"/>
             <Label Content="Password" FontFamily="Bodoni MT" FontSize="28" HorizontalAlignment="Center"></Label>
             <PasswordBox Name="pass" FontFamily="Bodoni MT" FontSize="28" Margin="20,0,20,0"></PasswordBox>
             <Button Name="log" Background="#F2D968" Content="Log In" FontFamily="Bodoni MT" FontSize="28" Margin="20,20,20,0"></Button>
