--- a/CallorieCrusher/Callorie Crusher Main.xaml
+++ b/CallorieCrusher/Callorie Crusher Main.xaml
@@ -44,14 +44,18 @@
                 <Label Content="Meats today:" FontSize="18" Background="White"/>
                 <TextBox Height="496" FontSize="18" BorderBrush="White" Margin="0,-1,0,0"/>
             </StackPanel>
-            <Label Content="Proteins" Width="100" Height="30" Margin="-2310,560,0,0" Padding="0,0,0,0" FontSize="16"/>
-            <Label Content="Fats" Width="100" Height="30" Margin="-1970,560,0,0" Padding="0,0,0,0" FontSize="16"/>
-            <Label Content="Carbs" Width="100" Height="30" Margin="-1680,560,0,0" Padding="0,0,0,0" FontSize="16"/>
-            <Label Content="Water" Width="100" Height="30" Margin="-1380,560,0,0" Padding="0,0,0,0" FontSize="16"/>
+            <Label Content="Proteins" Width="100" Height="30" Margin="-2310,560,0,0" Padding="20,0,0,0" FontSize="16"/>
+            <Label Content="Fats" Width="100" Height="30" Margin="-1970,560,0,0" Padding="20,0,0,0" FontSize="16"/>
+            <Label Content="Carbs" Width="100" Height="30" Margin="-1680,560,0,0" Padding="15,0,0,0" FontSize="16"/>
+            <Label Content="Water" Width="100" Height="30" Margin="-1380,560,0,0" Padding="12,0,0,0" FontSize="16"/>
             <Label Content="n %" Width="100" Height="30" Margin="-2310,0,0,0" Padding="34,0,0,0" FontSize="20"/>
             <Label Content="n %" Width="100" Height="30" Margin="-2010,0,0,0" Padding="34,0,0,0" FontSize="20"/>
             <Label Content="n %" Width="100" Height="30" Margin="-1710,0,0,0" Padding="34,0,0,0" FontSize="20"/>
             <Label Content="n %" Width="100" Height="30" Margin="-1410,0,0,0" Padding="34,0,0,0" FontSize="20"/>
+            <Label Content="*g/*g" Width="100" Height="30" Margin="-2310,30,0,0" Padding="20,0,0,0" FontSize="20" VerticalAlignment="Top"/>
+            <Label Content="*g/*g" Width="100" Height="30" Margin="-2010,30,0,0" Padding="20,0,0,0" FontSize="20" VerticalAlignment="Top"/>
+            <Label Content="*g/*g" Width="100" Height="30" Margin="-1710,30,0,0" Padding="20,0,0,0" FontSize="20" VerticalAlignment="Top"/>
+            <Label Content="*L/*L" Width="100" Height="30" Margin="-1410,30,0,0" Padding="20,0,0,0" FontSize="20" VerticalAlignment="Top"/>
             <Button Width="100" Height="30" Margin="-100,570,0,0" Background="#FF750000" BorderBrush="red" Content="EXIT" Foreground="WHITE"/>
         </StackPanel>
 
