--- a/CallorieCrusher/Callorie Crusher Main.xaml
+++ b/CallorieCrusher/Callorie Crusher Main.xaml
@@ -18,47 +18,45 @@
         </StackPanel>
         <StackPanel x:Name="Page1" Height="644" VerticalAlignment="Top" Margin="0,60,0,0" Orientation="Horizontal" Visibility="Visible" Background="#D9F0C7">
             <StackPanel Orientation="Horizontal" Width="600" Height="600"  Margin="13,0,0,0">
-                <StackPanel Orientation="Vertical">
-                    <Label Width="130" Height="300" VerticalAlignment="Bottom" Margin="0,300,0,0" Background="red"/>
+                <StackPanel Orientation="Vertical" Margin="15,0,0,0">
+                    <Label Width="130" Height="300" VerticalAlignment="Bottom" Margin="0,264,0,0" Background="red"/>
                     <Label Width="132" Height="531" VerticalAlignment="Bottom" Margin="0,-531,0,0" Background="Transparent" BorderBrush="Black" BorderThickness="2"/>
+                    <Label Content="Proteins" Width="100" Height="30" Margin="0,0,0,0" Padding="20,0,0,0" FontSize="16"/>
+                    <Label Content="n %" Width="100" Height="30" Margin="0,-650,0,0" Padding="34,0,0,0" FontSize="20"/>
+                    <Label Content="*g/*g" Width="100" Height="30" Margin="0,-590,0,0" Padding="20,0,0,0" FontSize="20" VerticalAlignment="Top"/>
                 </StackPanel>
                 <StackPanel>
-                    <Label Width="130" Height="529" VerticalAlignment="Bottom" Margin="15,72,0,0" Background="Yellow"/>
-                    <Label Width="132" Height="531" VerticalAlignment="Bottom" Margin="15,-531,0,0" Background="Transparent" BorderBrush="Black" BorderThickness="2"/>
+                    <Label Width="130" Height="529" VerticalAlignment="Bottom" Margin="15,34,0,0" Background="Yellow"/>
+                    <Label Width="132" Height="531" Margin="15,-531,0,0" Background="Transparent" BorderBrush="Black" BorderThickness="2"/>
+                    <Label Content="Fats" Width="100" Height="30" Margin="0,0,0,0" Padding="40,0,0,0" FontSize="16"/>
+                    <Label Content="n %" Width="100" Height="30" Margin="0,-650,0,0" Padding="34,0,0,0" FontSize="20"/>
+                    <Label Content="*g/*g" Width="100" Height="30" Margin="20,-590,0,0" Padding="20,0,0,0" FontSize="20" VerticalAlignment="Top"/>
                 </StackPanel>
                 <StackPanel>
-                    <Label Width="130" Height="500" VerticalAlignment="Bottom" Margin="15,100,0,1" Background="Green"/>
+                    <Label Width="130" Height="500" VerticalAlignment="Bottom" Margin="15,63,0,1" Background="Green"/>
                     <Label Width="132" Height="531" VerticalAlignment="Bottom" Margin="15,-531,0,0" Background="Transparent" BorderBrush="Black" BorderThickness="2"/>
+                    <Label Content="Carbs" Width="100" Height="30" Margin="0,0,0,0" Padding="35,0,0,0" FontSize="16"/>
+                    <Label Content="n %" Width="100" Height="30" Margin="0,-650,0,0" Padding="34,0,0,0" FontSize="20"/>
+                    <Label Content="*g/*g" Width="100" Height="30" Margin="20,-590,0,0" Padding="20,0,0,0" FontSize="20" VerticalAlignment="Top"/>
                 </StackPanel>
                 <StackPanel>
-                    <Label Width="130" Height="200" VerticalAlignment="Bottom" Margin="15,400,0,1" Background="Orange"/>
+                    <Label Width="130" Height="200" VerticalAlignment="Bottom" Margin="15,360,0,1" Background="Orange"/>
                     <Label Width="132" Height="531" VerticalAlignment="Bottom" Margin="15,-531,0,0" Background="Transparent" BorderBrush="Black" BorderThickness="2"/>
+                    <Label Content="Water" Width="100" Height="30" Margin="0,0,0,0" Padding="35,0,0,0" FontSize="16"/>
+                    <Label Content="n %" Width="100" Height="30" Margin="0,-640,0,0" Padding="34,0,0,0" FontSize="20"/>
+                    <Label Content="*L/*L" Width="100" Height="30" Margin="20,-590,0,0" Padding="20,0,0,0" FontSize="20" VerticalAlignment="Top"/>
                 </StackPanel>
-
-                
             </StackPanel>
             <StackPanel Orientation="Vertical" Width="620" Height="530" Margin="13,0,0,0">
                 <Label Content="Meats today:" FontSize="18" Background="White"/>
                 <ListBox Height="400" FontSize="18" BorderBrush="White" Background="White"/>
                 <Button x:Name="addFood" Height="90" Background="#FF3AB742" Width="618" BorderThickness="2" BorderBrush="Black" Content="EDA.pp 🍽 🍔 🍤 🍨 🍩 🍻" FontSize="40" Foreground="#FF042B11" Click="addFood_Click"/>
             </StackPanel>
-            <Label Content="Proteins" Width="100" Height="30" Margin="-2310,560,0,0" Padding="20,0,0,0" FontSize="16"/>
-            <Label Content="Fats" Width="100" Height="30" Margin="-1970,560,0,0" Padding="20,0,0,0" FontSize="16"/>
-            <Label Content="Carbs" Width="100" Height="30" Margin="-1680,560,0,0" Padding="15,0,0,0" FontSize="16"/>
-            <Label Content="Water" Width="100" Height="30" Margin="-1380,560,0,0" Padding="12,0,0,0" FontSize="16"/>
-            <Label Content="n %" Width="100" Height="30" Margin="-2310,0,0,0" Padding="34,0,0,0" FontSize="20"/>
-            <Label Content="n %" Width="100" Height="30" Margin="-2010,0,0,0" Padding="34,0,0,0" FontSize="20"/>
-            <Label Content="n %" Width="100" Height="30" Margin="-1710,0,0,0" Padding="34,0,0,0" FontSize="20"/>
-            <Label Content="n %" Width="100" Height="30" Margin="-1410,0,0,0" Padding="34,0,0,0" FontSize="20"/>
-            <Label Content="*g/*g" Width="100" Height="30" Margin="-2310,30,0,0" Padding="20,0,0,0" FontSize="20" VerticalAlignment="Top"/>
-            <Label Content="*g/*g" Width="100" Height="30" Margin="-2010,30,0,0" Padding="20,0,0,0" FontSize="20" VerticalAlignment="Top"/>
-            <Label Content="*g/*g" Width="100" Height="30" Margin="-1710,30,0,0" Padding="20,0,0,0" FontSize="20" VerticalAlignment="Top"/>
-            <Label Content="*L/*L" Width="100" Height="30" Margin="-1410,30,0,0" Padding="20,0,0,0" FontSize="20" VerticalAlignment="Top"/>
             <Button Width="100" Height="30" Margin="-100,570,0,0" Background="#FF750000" BorderBrush="red" Content="EXIT" Foreground="WHITE"/>
         </StackPanel>
-
-
-
+        
+        
+        
         <StackPanel x:Name="Page2" Background="#D9F0C7" Height="629" VerticalAlignment="Top" Margin="0,65,0,0" Orientation="Vertical" Visibility="Hidden">
             <StackPanel Orientation="Horizontal" Height="50" Margin="0,25,0,0">
                 <TextBox x:Name="Search" Width="650" Height="30" Margin="20,0,0,0" Text="Пошук" FontSize="18" Padding="0,0,0,0" PreviewMouseLeftButtonDown="TextBox_PreviewMouseLeftButtonDown"/>
