--- a/CallorieCrusher/Callorie Crusher Main.xaml
+++ b/CallorieCrusher/Callorie Crusher Main.xaml
@@ -1,22 +1,23 @@
-﻿<Window x:Class="CallorieCrusher.Callorie_Crusher_Main"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CallorieCrusher"
+        xmlns:controlzex="urn:controlzex" x:Class="CallorieCrusher.Callorie_Crusher_Main"
         mc:Ignorable="d"
         Title="Callorie_Crusher_Main" Height="730" Width="1280"
         Background="#D9F0C7">
-    
+
     <Grid>
         <StackPanel Orientation="Horizontal" Height="60" VerticalAlignment="Top" Background="White">
-            <Button BorderThickness="2" Height="45" Content="Main" FontSize="32" Foreground="White" Background="#4B752B" FontFamily="Bodoni MT" Name="osnova" Width="150" Margin="15,5,0,5" Click="osnova_Click" BorderBrush="Black"></Button>
-            <Button BorderThickness="2" Height="45" Content="Food" FontSize="32" Foreground="White" Background="#4B752B" FontFamily="Bodoni MT" Name="food" Width="150" Margin="15,5,0,5" Click="food_Click" BorderBrush="Black"></Button>
-            <Button BorderThickness="2" Height="45" Content="Calendar" FontSize="32" Foreground="White" Background="#4B752B" FontFamily="Bodoni MT" Name="calendar" Width="150" Margin="15,5,0,5" Click="calendar_Click" BorderBrush="Black"></Button>
-            <Button BorderThickness="2" Height="45" Content="Stats" FontSize="32" Foreground="White" Background="#4B752B" FontFamily="Bodoni MT" Name="stats" Width="150" Margin="15,5,0,5" Click="stats_Click" BorderBrush="Black"></Button>
-            <Label x:Name="timelabel" FontSize="32" Width="390" Foreground="#4B752B"  FontFamily="Bodoni MT" Margin="270,0,0,0" Padding="0,10,0,0"></Label>
+            <Button BorderThickness="2" Height="45" Content="Main" FontSize="32" Foreground="White" Background="#4B752B" FontFamily="Bodoni MT" x:Name="osnova" Width="150" Margin="15,5,0,5" Click="osnova_Click" BorderBrush="Black"/>
+            <Button BorderThickness="2" Height="45" Content="Food" FontSize="32" Foreground="White" Background="#4B752B" FontFamily="Bodoni MT" x:Name="food" Width="150" Margin="15,5,0,5" Click="food_Click" BorderBrush="Black"/>
+            <Button BorderThickness="2" Height="45" Content="Calendar" FontSize="32" Foreground="White" Background="#4B752B" FontFamily="Bodoni MT" x:Name="calendar" Width="150" Margin="15,5,0,5" Click="calendar_Click" BorderBrush="Black"/>
+            <Button BorderThickness="2" Height="45" Content="Stats" FontSize="32" Foreground="White" Background="#4B752B" FontFamily="Bodoni MT" x:Name="stats" Width="150" Margin="15,5,0,5" Click="stats_Click" BorderBrush="Black"/>
+            <Label x:Name="timelabel" FontSize="32" Width="390" Foreground="#4B752B"  FontFamily="Bodoni MT" Margin="270,0,0,0" Padding="0,10,0,0"/>
         </StackPanel>
-        <StackPanel x:Name="Page1" Height="644" VerticalAlignment="Top" Margin="0,60,0,0" Orientation="Horizontal" Visibility="Visible" Background="#D9F0C7">
+        <StackPanel x:Name="Page1" Height="644" VerticalAlignment="Top" Margin="0,60,0,0" Orientation="Horizontal" Visibility="Hidden" Background="#D9F0C7">
             <StackPanel Orientation="Horizontal" Width="600" Height="600"  Margin="13,0,0,0">
                 <StackPanel Orientation="Vertical" Margin="15,0,0,0">
                     <Label Width="130" Height="300" VerticalAlignment="Bottom" Margin="0,264,0,0" Background="red"/>
@@ -54,24 +55,29 @@
             </StackPanel>
             <Button Width="100" Height="30" Margin="-100,570,0,0" Background="#FF750000" BorderBrush="red" Content="EXIT" Foreground="WHITE"/>
         </StackPanel>
-        
-        
-        
+
+
+
         <StackPanel x:Name="Page2" Background="#D9F0C7" Height="629" VerticalAlignment="Top" Margin="0,65,0,0" Orientation="Vertical" Visibility="Hidden">
             <StackPanel Orientation="Horizontal" Height="50" Margin="0,25,0,0">
                 <TextBox x:Name="Search" Width="650" Height="30" Margin="20,0,0,0" Text="Пошук" FontSize="18" Padding="0,0,0,0" PreviewMouseLeftButtonDown="TextBox_PreviewMouseLeftButtonDown"/>
-                <Button Height="30" Width="30" Background="White" Content="🔍"/>
+                <Button Height="30" Width="30" Content="🔍" Background="Transparent" Foreground="#DD000000" FontSize="14" Padding="0,0,0,0" BorderThickness="0"/>
             </StackPanel>
         </StackPanel>
 
-        <StackPanel x:Name="Page3" Background="#D9F0C7" Height="639" VerticalAlignment="Top" Margin="0,65,0,0" Orientation="Horizontal" Visibility="Hidden">
+        <StackPanel x:Name="Page3" Background="#D9F0C7" Height="639" VerticalAlignment="Top" Margin="0,65,0,0" Visibility="Visible" Orientation="Horizontal">
+            <TextBox Height="140" Width="100" Background="Red"/>
+            <StackPanel Orientation="Vertical" Width="1178">
+                <Calendar Height="370" FlowDirection="RightToLeft" FontFamily="Times New Roman"  >
+                    
+                </Calendar>
+                
+            </StackPanel>
 
         </StackPanel>
 
 
 
-        <StackPanel x:Name="Page4" Background="#D9F0C7" Height="639" VerticalAlignment="Top" Margin="0,65,0,0" Orientation="Horizontal" Visibility="Hidden">
-
-        </StackPanel>
+        <StackPanel x:Name="Page4" Background="#D9F0C7" Height="639" VerticalAlignment="Top" Margin="0,65,0,0" Orientation="Horizontal" Visibility="Hidden"/>
     </Grid>
 </Window>
